--- a/components/Login/register.html
+++ b/components/Login/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Regístrate!</title>
-    <link rel="stylesheet" href="style-index3.css" />
+    <link rel="stylesheet" href="register.css" />
   </head>
   <body>
     <div class="contenedor-register">
@@ -37,10 +37,11 @@
         </div>
         <div class="checkbox-terminos">
           <label
-            ><input id="checkbox-de-terminos" type="checkbox" />Acepto los
-            términos y condiciones del servicio.</label
+            ><input id="checkbox-de-terminos" type="checkbox" />Acepto
+            los términos y condiciones del servicio.</label
           >
         </div>
+        <ul class="errores" id="error_checkbox"></ul>
         <button type="submit" class="boton-registrarse">Registrarse</button>
         <div class="link-login">
           <p>
