--- a/css/navbar.css
+++ b/css/navbar.css
@@ -38,7 +38,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #73c0fc;
+  background-color: #183153;
   transition: 0.4s;
   border-radius: 30px;
 
