--- a/css/cart.css
+++ b/css/cart.css
@@ -59,16 +59,30 @@ p {
 .boton_proceder_al_pago {
   display: flex;
   justify-content: end;
-  padding: 30px;
 }
 
 .div_flotante_precio {
   display: none;
 }
+
+#alert_size {
+  justify-content: center;
+  align-items: center;
+  display: inherit;
+  display: fixed;
+  text-align: center;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   footer {
     margin-bottom: 30px;
+  }
+
+  #proceder-pago {
+    display: none;
   }
 
   h1,
@@ -141,7 +155,6 @@ p {
   }
 }
 
-
 .flip-card {
   background-color: transparent;
   width: 240px;
@@ -152,7 +165,7 @@ p {
 
 .heading_8264 {
   position: absolute;
-  letter-spacing: .2em;
+  letter-spacing: 0.2em;
   font-size: 0.5em;
   top: 2em;
   left: 18.6em;
@@ -179,7 +192,7 @@ p {
 .number {
   position: absolute;
   font-weight: bold;
-  font-size: .6em;
+  font-size: 0.6em;
   top: 8.3em;
   left: 1.6em;
 }
@@ -188,7 +201,7 @@ p {
   position: absolute;
   font-weight: bold;
   top: 635.8em;
-  font-size: .01em;
+  font-size: 0.01em;
   left: 140.3em;
 }
 
@@ -229,7 +242,7 @@ p {
   width: 8em;
   height: 0.8em;
   top: 5em;
-  left: .8em;
+  left: 0.8em;
   border-radius: 2.5px;
 }
 
@@ -246,7 +259,7 @@ p {
 .code {
   font-weight: bold;
   text-align: center;
-  margin: .2em;
+  margin: 0.2em;
   color: black;
 }
 
@@ -263,8 +276,9 @@ p {
   transform: rotateY(180deg);
 }
 
-.flip-card-front, .flip-card-back {
-  box-shadow: 0 8px 14px 0 rgba(0,0,0,0.2);
+.flip-card-front,
+.flip-card-back {
+  box-shadow: 0 8px 14px 0 rgba(0, 0, 0, 0.2);
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -277,16 +291,18 @@ p {
 }
 
 .flip-card-front {
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
   background-color: #171717;
 }
 
 .flip-card-back {
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
   background-color: #171717;
   transform: rotateY(180deg);
 }
 
-.flip-card{
+.flip-card {
   margin: 0 auto;
 }
