--- a/css/product-info.css
+++ b/css/product-info.css
@@ -163,7 +163,7 @@ h1 {
 
   section {
     display: flex;
-    width: 100%;
+    width: 70%;
     height: 430px;
     border: 10px solid rgb(219, 219, 219);
     border-radius: 10px;
@@ -179,9 +179,13 @@ h1 {
 
   section img:hover {
     cursor: pointer;
-    width: 300px;
+    width: 400px;
     opacity: 1;
     filter: contrast(120%);
+  }
+
+  .product_description{
+    width: 20%;
   }
 
   .ful-img {
