Entrega 7 ejercicio grupal

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,3 +157,35 @@ html {
   margin-top: 20px;
 }
 
+/* ------ Css perfil ------ */
+
+#contenedor-perfil h1{
+  text-align: center !important;
+}
+
+
+#contenedor-perfil .contenedor-inputs{
+  padding-top: 20px;
+  margin-left: 10%;
+  margin-right: 45%;
+}
+
+#delete-button {
+  display: flex;
+  transform: translate(490px);
+  bottom: 38px;
+}
+
+.image-upload {
+  text-align: center;
+  margin: 20px;
+}
+
+#image-preview {
+  max-width: 100%;
+  max-height: 300px;
+}
+
+#btn-guardar {
+  margin-top: 10px;
+}
