--- a/css/product-info.css
+++ b/css/product-info.css
@@ -1,5 +1,11 @@
 h1 {
   margin: 40px 0;
+  font-family: monospace;
+  font-size: 33px;
+}
+.contenedor_titulo{
+  display: flex;
+  justify-content: space-between;
 }
 
 .product_description h4 {
@@ -36,7 +42,6 @@ h1 {
 
 .accordion-body i {
   font-size: 1rem;
-  /* cursor: pointer; */
   margin-left: 5px;
 }
 
@@ -61,166 +66,12 @@ h1 {
   font-size: 1rem;
 }
 
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-
-  #carrusel_nahuel,
-  #fulImgBox {
-    display: none;
-  }
-
-  .carousel {
-    max-width: 100%;
-    height: auto;
-    padding: 0;
-  }
-
-  .info {
-    max-width: 100%;
-  }
-
-  .card{
-    display: block;
-    width: 80%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .p_info_description {
-    margin-top: 0;
-    margin-bottom: 30px;
-  }
-
+#comentarios-mobile{
+  padding-top: 20px;
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-  #carrusel_nahuel,
-  #fulImgBox {
-    display: none;
-  }
-
-  .carousel {
-    max-width: 100%;
-    height: auto;
-  }
-  .info {
-    max-width: 100%;
-  }
-
-  .card{
-    display: flex;
-    width: 100%;
-    border-radius: 15px;
-  }
-
-  
-
-  .card{
-    display: flex;
-    width: 50%;
-  }
-
-  /* .p_info_description {
-    display: flex;
-  } */
-
-
-  /* .p_info_description{
-    display: none;
-  }  */
-
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-  #carrusel_nahuel,
-  #fulImgBox {
-    display: none;
-  }
-
-  #carrusel_nacho {
-    display: flex;
-  }
-
-  .card{
-    display: flex;
-    width: 50%;
-  }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-  #carrusel_nahuel {
-    display: flex;
-  }
-
-  #carrusel_nacho {
-    display: none;
-  }
-
-  section {
-    display: flex;
-    width: 100%;
-    height: 430px;
-    border: 10px solid rgb(219, 219, 219);
-    border-radius: 10px;
-  }
-
-  section img {
-    width: 0px;
-    flex-grow: 1;
-    object-fit: cover;
-    opacity: 0.8;
-    transition: 0.5s ease;
-  }
-
-  section img:hover {
-    cursor: pointer;
-    width: 300px;
-    opacity: 1;
-    filter: contrast(120%);
-  }
-
-  .product_description{
-    width: 100%;
-  }
-
-  .ful-img {
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(0, 0, 0, 0.9);
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    z-index: 99;
-  }
-
-  .ful-img span {
-    position: absolute;
-    top: 5%;
-    right: 5%;
-    color: #fff;
-    cursor: pointer;
-  }
-
-  #closeSpan {
-    font-size: 2rem;
-  }
-  
-  .card{
-    display: flex;
-    width: 50%;
-  }
-
-  .p_info_description{
-    display: flex;
-  }
+#comentarios-mobile label{
+  margin-top: 20px;
 }
 
 /* boton añadir carrito */
@@ -335,19 +186,6 @@ h1 {
   margin-bottom: 0;
 }
 
-
-/* Titulo */
-
-h1 {
-  font-family: monospace;
-  font-size: 33px;
-}
-
-.contenedor_titulo{
-  display: flex;
-  justify-content: space-between;
-}
-
 .dark_mode #cargarDatos {
   background-color: #fff !important;
   color: black;
@@ -373,5 +211,120 @@ h1 {
   cursor: pointer;
 }
 
-/* productos relacionados */
+section {
+  display: flex;
+  width: 100%;
+  height: 430px;
+  border: 10px solid rgb(219, 219, 219);
+  border-radius: 10px;
+}
+
+section img {
+  width: 0px;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: 0.8;
+  transition: 0.5s ease;
+}
+
+section img:hover {
+  cursor: pointer;
+  width: 300px;
+  opacity: 1;
+  filter: contrast(120%);
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+  #carrusel_nahuel {
+    display: none;
+  }
+
+  .carousel {
+    max-width: 100%;
+    height: auto;
+    padding: 0;
+  }
+
+  .info {
+    max-width: 100%;
+  }
+
+  .card{
+    display: block;
+    width: 80%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .p_info_description {
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  #carrusel_nahuel {
+    display: none;
+  }
+
+  .carousel {
+    max-width: 100%;
+    height: auto;
+  }
+  .info {
+    max-width: 100%;
+  }
+
+  .card{
+    display: flex;
+    width: 50%;
+    border-radius: 15px;
+  }
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  #carrusel_nahuel {
+    display: none;
+  }
+
+  #carrusel_nacho {
+    display: flex;
+  }
+
+  .card{
+    display: flex;
+    width: 50%;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  #carrusel_nahuel {
+    display: flex;
+  }
+
+  #carrusel_nacho {
+    display: none;
+  }
+
+  .product_description{
+    width: 100%;
+  }
+  
+  .card{
+    display: flex;
+    width: 50%;
+  }
+
+  .p_info_description{
+    display: flex;
+  }
+}
 
