--- a/css/product-info.css
+++ b/css/product-info.css
@@ -1,5 +1,5 @@
 h1 {
-  margin: 40px 0;
+  margin: 20px 0;
   font-family: monospace;
   font-size: 33px;
 }
@@ -13,8 +13,15 @@ h1 {
   margin: 20px 0;
 }
 
-.product_description p {
+.product_description{
   font-size: 1.1rem;
+}
+
+#producto, #comments-seccion{
+  border: solid 1px gray;
+  padding: 10px;
+  margin-top: 10px;
+  box-shadow: 5px 5px 5px rgb(87, 86, 86);
 }
 
 #productos_relacionados {
@@ -200,6 +207,11 @@ h1 {
 .dark_mode #white_mode_svg{
   display:none;
 }
+
+.dark_mode section img{
+  opacity: 0.4;
+}
+
 .light_mode #dark_mode_svg{
   display:none;
 }
@@ -217,8 +229,6 @@ section {
   display: flex;
   width: 100%;
   height: 430px;
-  border: 10px solid rgb(219, 219, 219);
-  border-radius: 10px;
 }
 
 section img {
