--- a/css/productos.css
+++ b/css/productos.css
@@ -1,11 +1,20 @@
 .card {
   cursor: pointer;
+  border: solid rgb(77, 76, 76) 1px;
 }
 
 h1 {
+  font-family: monospace;
   margin: 40px 0;
 }
 
 h4 {
   margin: 40px 0;
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .card:hover {
+    box-shadow: 5px 10px 50px rgb(86, 87, 86);
+  }
 }
